# ShibuyaStream

./: Array.cpp  Array.h  CMakeLists.txt  DeviceArray.h  DeviceStream.h  Exception.h  HostArray.h  HostStream.h  Makefile  README.md  Report.h  Stream.cpp  Stream.h  Workload.h  hip2cuda.h  shibuya.cpp
doc/doxygen/: Doxyfile
src/: AVXHostStream.h  AVXStub.h  Array.cpp  Array.h  CommandLine.h  DeviceArray.h  DeviceStream.h  Exception.h  HostArray.h  HostStream.h  Makefile  NonTemporalAVXHostStream.h  NonTemporalDeviceStream.h  Report.h  Stream.cpp  Stream.h  Workload.h  hip2cuda.h  shibuya.cpp
